style.css
* {
  box-sizing: border-box;
}

body {
  margin: 0;
  padding: 0;
  background-color: hsl(275, 100%, 97%);
}

.background-pattern {
  width: 100%;
  position: absolute;
  top: 0;
  left: 0;
}

.container {
  font-family: "Work Sans", sans-serif;
  font-size: 16px;
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 100vh;
  position: relative;
}

.faq-container {
  width: 520px;
  height: 470px;
  background-color: hsl(0, 100%, 100%);
  padding: 10px 25px;
  border-radius: 15px;
}

.star-icon {
  margin-right: 20px;
}

button {
  border: none;
  background-color: hsl(0, 100%, 100%);
  cursor: pointer;
}

.faq-row {
  display: flex;
  color: hsl(292, 42%, 14%);
  font-size: 25px;
  margin-top: 0;
}

.row {
  display: flex;
  justify-content: space-between;
}

.questions {
  color: hsl(292, 42%, 14%);
  font-weight: bold;
}

.questions:hover {
  cursor: pointer;
  color: hsl(292, 16%, 49%);
}

.answer {
  color: hsl(292, 16%, 49%);
  margin-top: 0;
  padding-bottom: 20px;
  border-bottom: 1px solid hsl(275, 100%, 97%);
}

.fourth-answer {
  border-bottom: none;
}

